--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ argparse==1.2.1
 dj-database-url==0.3.0
 djangorestframework==3.1.3
 gunicorn==19.3.0
+requests==2.7.0
 whitenoise==2.0.2
 wsgiref==0.1.2
 psycopg2==2.5.4
